re PR c++/14932 (cannot use offsetof to get offsets of array elements in g++ 3.4.0 prerelease)

PR c++/14932
	* parser.c (cp_parser_postfix_expression): Allow subscript
	operator in offsetof.

	PR c++/14932
	* g++.dg/parse/offsetof4.C: New test.

From-SVN: r82540